...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".locationreminders.ReminderDescriptionActivity">


        <TextView
            android:id="@+id/titleContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@{reminderDataItem.title}"
...
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="this is title content text" />

        <TextView
            android:id="@+id/descriptionContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:maxWidth="320dp"
...
