package com.udacity.project4

import android.app.Application
import androidx.recyclerview.widget.RecyclerView
import androidx.test.core.app.ActivityScenario
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso.closeSoftKeyboard
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.RootMatchers.withDecorView
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import com.google.android.gms.maps.model.LatLng
import com.udacity.project4.locationreminders.RemindersActivity
import com.udacity.project4.locationreminders.data.ReminderDataSource
import com.udacity.project4.locationreminders.data.local.LocalDB
import com.udacity.project4.locationreminders.data.local.RemindersLocalRepository
import com.udacity.project4.locationreminders.reminderslist.ReminderListFragmentDirections
import com.udacity.project4.locationreminders.reminderslist.RemindersListViewModel
import com.udacity.project4.locationreminders.savereminder.SaveReminderFragmentDirections
import com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel
import com.udacity.project4.locationreminders.ToastMatcher.ToastMatcher
import com.udacity.project4.util.DataBindingIdlingResource
import com.udacity.project4.util.monitorActivity
import kotlinx.android.synthetic.main.fragment_save_reminder.*
import kotlinx.coroutines.runBlocking
import kotlinx.coroutines.test.runBlockingTest
import org.hamcrest.Matchers.`is`
import org.hamcrest.Matchers.not
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import org.koin.androidx.viewmodel.dsl.viewModel
import org.koin.core.context.startKoin
import org.koin.core.context.stopKoin
import org.koin.dsl.module
import org.koin.test.AutoCloseKoinTest
import org.koin.test.get
import org.mockito.Mockito
import org.mockito.Mockito.mock
import org.mockito.Mockito.verify


@RunWith(AndroidJUnit4::class)
@LargeTest
//END TO END test to black box test the app
class RemindersActivityTest :
    AutoCloseKoinTest() {// Extended Koin Test - embed autoclose @after method to close Koin after every test

    private lateinit var repository: ReminderDataSource
    private lateinit var appContext: Application

    private val dataBindingIdlingResource = DataBindingIdlingResource()

    /**
     * As we use Koin as a Service Locator Library to develop our code, we'll also use Koin to test our code.
     * at this step we will initialize Koin related code to be able to use it in out testing.
     */
    @Before
    fun init() {
        stopKoin()//stop the original app koin
        appContext = getApplicationContext()
        val myModule = module {
            viewModel {
                RemindersListViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single {
                SaveReminderViewModel(
                    appContext,
                    get() as ReminderDataSource
                )
            }
            single { RemindersLocalRepository(get()) as ReminderDataSource }
            single { LocalDB.createRemindersDao(appContext) }
        }
        //declare a new koin module
        startKoin {
            modules(listOf(myModule))
        }
        //Get our real repository
        repository = get()

        //clear the data to start fresh
        runBlocking {
            repository.deleteAllReminders()
        }
    }

    @Before
    fun registerIdlingResource() {
        IdlingRegistry.getInstance().register(dataBindingIdlingResource)
    }

    @After
    fun unregisterIdlingResource() {
        IdlingRegistry.getInstance().unregister(dataBindingIdlingResource)
    }



    @Test
    fun addReminder_CheckItIsAdded_ShowToast() = runBlocking {
        // Start the Reminders screen.
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        // checking the reminderList is displayed
        onView(withId(R.id.remindersRecyclerView)).check(matches(isDisplayed()))

        // Clicking the addNewReminderButton and navigate to saveReminderFragment
        onView(withId(R.id.addReminderFAB)).perform(click())

        // After navigating check all texts are displayed
        onView(withId(R.id.reminderTitle)).check(matches(isDisplayed()))
        onView(withId(R.id.reminderDescription)).check(matches(isDisplayed()))
        onView(withId(R.id.selectLocation)).check(matches(isDisplayed()))

        // Adding some data to the new reminder
        onView(withId(R.id.reminderTitle)).perform(ViewActions.typeText("New Reminder Title"))
        onView(withId(R.id.reminderDescription)).perform(ViewActions.typeText("New Reminder Description"))

        // Close softKeyboard before clicking saveButton
        closeSoftKeyboard()

        // Clicking the location Reminder Text and go to selectLocationFragment
        onView(withId(R.id.selectLocation)).perform(click())
        // find the map then add marker
        onView(withId(R.id.select_location_map_fragment)).perform(click())

        onView(withId(R.id.save_location_button)).perform(click())

        // Clicking the Save reminder button
        onView(withId(R.id.saveReminder)).perform(click())

        // Check that the toast is shown
        onView(withText(R.string.reminder_saved)).inRoot(ToastMatcher()).check(matches(isDisplayed()))

        // After navigating to the reminderList screen
        // Clicking on the item after it has been added
        onView(withId(R.id.remindersRecyclerView)).check(matches(isDisplayed()))
        onView(withId(R.id.remindersRecyclerView)).perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(0, click()))

        // Going to the activity description and check the details of the new reminder
        onView(withId(R.id.titleContentText)).check(matches(withText("New Reminder Title")))
        onView(withId(R.id.descriptionContent)).check(matches(withText("New Reminder Description")))

        return@runBlocking
    }


    @Test
    fun addReminder_CheckItIsNotAdded_ShowSnackbar() = runBlocking {
        // Start the Reminders screen.
        val activityScenario = ActivityScenario.launch(RemindersActivity::class.java)
        dataBindingIdlingResource.monitorActivity(activityScenario)

        // checking the reminderList is displayed
        onView(withId(R.id.remindersRecyclerView)).check(matches(isDisplayed()))

        // Clicking the addNewReminderButton and navigate to saveReminderFragment
        onView(withId(R.id.addReminderFAB)).perform(click())

        // After navigating check all texts are displayed
        onView(withId(R.id.reminderTitle)).check(matches(isDisplayed()))
        onView(withId(R.id.reminderDescription)).check(matches(isDisplayed()))
        onView(withId(R.id.selectLocation)).check(matches(isDisplayed()))

        // Adding some data to the new reminder
        onView(withId(R.id.reminderTitle)).perform(ViewActions.typeText("New Reminder Title"))
        onView(withId(R.id.reminderDescription)).perform(ViewActions.typeText("New Reminder Description"))

        // Close softKeyboard before clicking saveButton
        closeSoftKeyboard()
        // Here we will not add location to show the snackbar


        // Clicking the Save reminder button
        onView(withId(R.id.saveReminder)).perform(click())

        // Check that the snackbar is shown
        onView(withText(R.string.err_select_location))
            .check(matches(isDisplayed()));

        return@runBlocking
    }

}
